示範更多 ngx-translate 用法

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,8 @@
 {
-  "Hello World": "Hello World!"
+  "SiteInfo": {
+    "Title": "Site Title"
+  },
+  "MSG": {
+    "Hello World": "Hello {{name}}!"
+  }
 }
